# print-junk

./: .gitignore  CLAUDE.md  Cargo.toml  Claude.md  INSTALL.md  Imposition Details.md  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
crates/pdf-async-runtime/: Cargo.toml
crates/pdf-async-runtime/src/: lib.rs
crates/pdf-flashcards/: Cargo.toml
crates/pdf-flashcards/src/: csv.rs  lib.rs  options.rs  pdf.rs  types.rs
crates/pdf-import/: Cargo.toml
crates/pdf-import/src/: archive.rs  lib.rs
crates/pdf-impose/: Cargo.toml
crates/pdf-impose/examples/: test_all_formats.rs  test_quarto.rs
crates/pdf-impose/src/: constants.rs  impose.rs  lib.rs  marks.rs  options.rs  preview.rs  stats.rs  types.rs
crates/pdf-impose/src/impose/: cascade.rs  flyleaves.rs  io.rs  mod.rs  page_source.rs  sheet.rs  signature.rs  simple.rs
crates/pdf-impose/src/layout/: arrangement.rs  creep.rs  grid.rs  mod.rs  page_order.rs  placement.rs  signature.rs  slots.rs  spread.rs  trim_bounds.rs  types.rs
crates/pdf-impose/src/layout/tests/: arrangement_tests.rs  creep_tests.rs  page_order_tests.rs  placement_tests.rs  slots_tests.rs  spread_tests.rs  trim_bounds_tests.rs
crates/pdf-impose/src/render/: mod.rs  page.rs  page_numbers.rs  xobject.rs
crates/pdf-impose/tests/: impose_tests.rs  options_tests.rs  preview_tests.rs  stats_tests.rs  types_tests.rs
crates/pdf-tools-cli/: Cargo.toml
crates/pdf-tools-cli/src/: main.rs
crates/pdf-tools-gui/: Cargo.toml  build.rs  index.html
crates/pdf-tools-gui/assets/: Info.plist  icon.icns  pdf-tools-gui.desktop
crates/pdf-tools-gui/src/: app.rs  logger.rs  main.rs  ui_components.rs  viewer.rs  worker.rs
crates/pdf-tools-gui/src/handlers/: flashcards.rs  impose.rs  viewer.rs
crates/pdf-tools-gui/src/views/: flashcards.rs  impose.rs  mod.rs  viewer.rs
crates/pdf-tools-gui/src/views/flashcards/: flashcard_layout.rs  mod.rs
crates/pdf-tools-gui/src/views/impose/: actions_section.rs  additional_section.rs  binding_section.rs  cascade_section.rs  input_section.rs  margins_section.rs  marks_section.rs  mod.rs  output_section.rs  state.rs  statistics_section.rs
crates/pdf-tools-gui/tests/: pdfium_render_test.rs
crates/pdf-typeset/: Cargo.toml
crates/pdf-typeset/examples/: sample.rs
crates/pdf-typeset/src/: config.rs  lib.rs  markup.rs  outline.rs  template.rs  typst_table.rs
crates/pdf-typeset/src/html/: mod.rs
crates/pdf-typeset/src/math/: engine.rs  fixup.rs  image.rs  mod.rs  validate.rs
crates/pdf-units/: Cargo.toml
crates/pdf-units/src/: lib.rs
crates/print-junk-cli/: Cargo.toml
crates/print-junk-cli/src/: main.rs
crates/print-junk-gui/: Cargo.toml  build.rs  index.html
crates/print-junk-gui/assets/: Info.plist  print-junk-gui.desktop
crates/print-junk-gui/src/: app.rs  main.rs  project.rs  startup.rs  ui_components.rs  viewer.rs  worker.rs
crates/print-junk-gui/src/handlers/: mod.rs  typesetting.rs  viewer.rs
crates/print-junk-gui/src/views/: mod.rs  preview.rs  tab_bar.rs  viewer.rs
crates/print-junk-gui/src/views/flashcards/: flashcard_layout.rs  mod.rs
crates/print-junk-gui/src/views/impose/: binding_section.rs  cascade_section.rs  margins_section.rs  mod.rs  output_section.rs  state.rs
crates/print-junk-gui/src/views/typesetting/: mod.rs  outline.rs
crates/print-junk-gui/tests/: pdfium_render_test.rs
