[workspace]
resolver = "2"
members = [
    "crates/pdf-async-runtime",
    "crates/pdf-flashcards",
    "crates/pdf-impose",
    "crates/pdf-tools-cli",
    "crates/pdf-tools-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
# PDF libraries
oxidize-pdf = "1.6"
printpdf = "0.8"
lopdf = "0.36"
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_7543", "image"] }

# GUI
egui = "0.33"
eframe = "0.33"
rfd = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = "1"

# Common utilities
csv = "1.3"
thiserror = "2"
anyhow = "1"
image = "0.25"
serde = "1"
serde_json = "1"
