[workspace]
resolver = "2"
members = [
    "crates/pdf-async-runtime",
    "crates/pdf-flashcards",
    "crates/pdf-impose",
    "crates/pdf-tools-cli",
    "crates/pdf-tools-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
# PDF libraries
oxidize-pdf = "1.6"
printpdf = "0.8"
lopdf = "0.36"
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_7543", "image"] }

# GUI
egui = "0.33"
eframe = "0.33"
rfd = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = "1"

# Common utilities
csv = "1.3"
thiserror = "2"
anyhow = "1"
image = "0.25"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[workspace.lints.clippy]
# Correctness & suspicious code
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides — categorically not applicable
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# TODO: Rework code to eliminate these allows. Each represents real code quality
# issues that should be fixed by refactoring (splitting long functions, reducing
# arguments via builder/option structs, using newtypes for numeric conversions, etc.)
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
return_self_not_must_use = "allow"
enum_variant_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
