[package]
name = "pdf-async-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true

# Re-export types from library crates
pdf-flashcards = { path = "../pdf-flashcards" }
pdf-impose = { path = "../pdf-impose" }

# Typesetting is desktop-only (Typst is a large native dependency), so its
# command/update types are excluded from the WASM build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdf-typeset = { path = "../pdf-typeset" }
