[package]
name = "pdf-flashcards"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pdf-units = { path = "../pdf-units" }
lopdf.workspace = true
ttf-parser.workspace = true
csv.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt"] }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
