[package]
name = "pdf-impose"
version.workspace = true
edition.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
lopdf.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.15"
tokio = { workspace = true, features = ["macros", "rt"] }
