[package]
name = "pdf-units"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde_json.workspace = true
