[package]
name = "print-junk-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "pdft"
path = "src/main.rs"

[dependencies]
pdf-flashcards = { path = "../pdf-flashcards" }
pdf-impose = { path = "../pdf-impose" }
pdf-typeset = { path = "../pdf-typeset" }
pdf-import = { path = "../pdf-import" }
clap.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
log.workspace = true
env_logger.workspace = true

[features]
default = []
# Print-resolution figure upgrades for arXiv imports. Off by default: it pulls
# in the vendored PDFium binary, which the CLI otherwise doesn't need.
hires-import = ["pdf-import/hires"]
