[package]
name = "print-junk-gui"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pdf-flashcards = { path = "../pdf-flashcards" }
pdf-impose = { path = "../pdf-impose" }
pdf-async-runtime = { path = "../pdf-async-runtime" }
pdf-units = { path = "../pdf-units" }
eframe = { workspace = true, features = ["persistence"] }
egui.workspace = true
image.workspace = true
anyhow.workspace = true
rfd.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log = "0.4"
chrono = "0.4"
lopdf.workspace = true

# PDF rendering + typesetting (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdfium-render = { workspace = true, optional = true }
pdf-typeset = { path = "../pdf-typeset" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }

[features]
default = ["pdf-viewer"]
pdf-viewer = ["pdfium-render"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
ureq = { version = "2", features = ["native-tls"] }
flate2 = "1"
tar = "0.4"
image = { workspace = true }
icns = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
