[package]
name = "print-junk-gui"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pdf-flashcards = { path = "../pdf-flashcards" }
pdf-impose = { path = "../pdf-impose" }
pdf-async-runtime = { path = "../pdf-async-runtime" }
pdf-units = { path = "../pdf-units" }
eframe = { workspace = true, features = ["persistence"] }
egui.workspace = true
image.workspace = true
anyhow.workspace = true
rfd.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log = "0.4"
chrono = "0.4"
lopdf.workspace = true
# Shared interactive page widget, used by the preview in display-only mode. Pure
# egui/image (no PDFium), so it's portable to wasm and a normal all-target dep —
# only the renderer below is desktop-gated. Fetched from GitHub automatically.
junk-libs-egui-docview = { git = "https://github.com/AberrantWolf/junk-libs" }

# PDF rendering + typesetting (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Shared PDFium render core: vendors its own binary via build.rs, gated behind the
# pdf-viewer feature. For local co-development against a sibling junk-libs
# checkout, uncomment the `[patch]` in the workspace-root Cargo.toml.
junk-libs-pdfium = { git = "https://github.com/AberrantWolf/junk-libs", optional = true }
pdf-typeset = { path = "../pdf-typeset" }
pdf-import = { path = "../pdf-import" }
base64 = "0.22"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }

[features]
default = ["pdf-viewer"]
pdf-viewer = ["dep:junk-libs-pdfium"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
image = { workspace = true }
icns = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
